@@ -1,3 +1,15 @@
+2014-07-31  Robert Dewar  <dewar@adacore.com>
+
+	* exp_ch5.adb, freeze.adb, exp_ch3.adb: Minor comment correction.
+	* s-arit64.adb: Minor reformatting.
+
+2014-07-31  Robert Dewar  <dewar@adacore.com>
+
+	* gnat1drv.adb (Adjust_Global_Switches): Default for overflow
+	checking is enabled except in GNAT_Mode.
+	* switch-c.adb (Scan_Front_End_Switches): Implement -gnato0
+	(suppress overflow checks).
+
 2014-07-31  Ed Schonberg  <schonberg@adacore.com>
 
 	* exp_ch3.adb (Expand_Freeze_Record_Type): Do not build an
